<resources>
    <string name="app_name">ApplikasiRT04</string>
    <string name="home">Kegiatan</string>
    <string name="finance">Keuangan</string>
    <string name="information">Laporan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profil</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masukkan_kata_sandi">Masukkan Kata Sandi</string>
    <string name="kategori">Kategori</string>
    <string name="masuk">Masuk</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="register">Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="buat_sekarang">Buat Sekarang</string>
    <string name="halo_user">Halo, </string>
    <string name="informasi_kegiatan">Informasi Kegiatan</string>
    <string name="content_1">Pada bagian ini setiap warga bisa\nmelihat informasi kegiatan\npada RT 04.</string>
    <string name="informasi_lingkungan">Informasi Laporan Lingkungan</string>
    <string name="content_2">Apabila ada aktifitas mencurigakan\ndi lingkungan RT 04,\nwarga bisa menulis dibagian sini.</string>
    <string name="informasi_keuangan">Informasi Keuangan</string>
    <string name="content_3">Setiap warga bisa melihat informasi\nkeuangan RT 04 secara transparan.</string>
    <string name="profilku">Profilku</string>
    <string name="john_dou">John Dou</string>
    <string name="john_gmail_com">john@gmail.com</string>
    <string name="ketua_rt">Ketua RT</string>
    <string name="keluar_akun">Keluar Akun</string>
    <string-array name="category">
        <item>Warga</item>
        <item>Ketua RT</item>
    </string-array>

    <string-array name="status">
        <item>Siaga</item>
        <item>Waspada</item>
    </string-array>

    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="keuangan_rt_04">Keuangan RT 04</string>
    <string name="total_5_000000">Total: 0.0</string>
    <string name="pemasukan_bulan_ini">Pemasukan Bulan Ini</string>
    <string name="_3_000_000">0.0</string>
    <string name="pemasukan_belakangan_ini">Pemasukan belakangan ini</string>
    <string name="lihat_semua"><![CDATA[Lihat Semua >]]></string>
    <string name="buat_kegiatan">Buat Kegiatan</string>
    <string name="isi_kegiatan">Isi Kegiatan</string>
    <string name="topik">Topik</string>
    <string name="isi_topik_kegiatan">Isi Topik Kegiatan</string>
    <string name="penjelasan_kegiatan">Penjelasan Kegiatan</string>
    <string name="penjelasan_mengenai_kegiatan">Penjelasan Mengenai Kegiatan</string>
    <string name="tempat">Tempat</string>
    <string name="isi_tempat_kegiatan">Isi Tempat Kegiatan</string>
    <string name="simpan">Simpan</string>
    <string name="title">title</string>
    <string name="description">Description\nDescription\nDescription\nDescription</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="kegiatanku">Kegiatanku</string>
    <string name="edit_kegiatan">Edit Kegiatan</string>
    <string name="masukkan_jumlah_pemasukan">Masukkan Jumlah Pemasukan</string>
    <string name="masukkan_nominal">Masukkan Nominal</string>
    <string name="nama_pemasukkan">Nama Pemasukkan</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="tanggal">Tanggal</string>
    <string name="tambah_pemasukan">Tambah Pemasukan</string>
    <string name="isi_pemasukan">Isi Pemasukan</string>
    <string name="isi_pengeluaran">Isi Pengeluaran</string>
    <string name="masukkan_jumlah_pengeluaran">Masukkan Jumlah Pengeluaran</string>
    <string name="nama_pengeluaran">Nama Pengeluaran</string>
    <string name="tambah_pengeluaran">Tambah Pengeluaran</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="kembali">Kembali</string>
    <string name="pengeluaran_belakangan_ini">Pengeluaran belakangan ini</string>
    <string name="membeli_kopi">Membeli Kopi</string>
    <string name="_1_000_000">1.000.000</string>
    <string name="laporanku">Laporanku</string>
    <string name="buat_laporan">Buat Laporan</string>
    <string name="masalah">Masalah</string>
    <string name="isi_topik_masalah">Isi Topik Masalah</string>
    <string name="ceritakan_masalah_anda">Ceritakan Masalah Anda</string>
    <string name="nama_pelapor">Nama Pelapor</string>
    <string name="isi_nama_anda">Isi Nama Anda</string>
    <string name="upload_foto">UPLOAD FOTO</string>
    <string name="laporkan">Laporkan</string>
    <string name="edit_laporan">Edit Laporan</string>
    <string name="isi_laporan">Isi Laporan</string>
    <string name="laporan_lingkungan">Laporan Lingkungan</string>
    <string name="buat_laporan_baru">Buat Laporan Baru</string>
    <string name="nama_pelapor_1">Nama Pelapor :</string>
    <string name="bukti_foto">Bukti Foto</string>
    <string name="rt_04">RT 04</string>
    <string name="keuanganku">Keuanganku</string>
    <string name="report_pemasukan">Report Pemasukan</string>
    <string name="report_pengeluaran">Report Pengeluaran</string>
    <string name="pencarian">Pencarian</string>
    <string name="rs_bekasi">Rs Bekasi</string>
    <string name="detail">Detail</string>
    <string name="alamat">alamat\nalamat\nalamat\nalamat\nalamat</string>
    <string name="_099999999999">099999999999</string>
    <string name="ke_website">Ke Website</string>
    <string name="laporan_warga_rt_04">Laporan Warga RT 04</string>
</resources>