<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/home"/>

    <item
        android:id="@+id/financeFragment"
        android:icon="@drawable/ic_finance_selector"
        android:title="@string/finance"/>

    <item
        android:id="@+id/informationFragment"
        android:icon="@drawable/ic_information_selector"
        android:title="@string/information"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_selector"
        android:title="@string/information"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_selector"
        android:title="@string/profile"/>
</menu>